final check in of portal - app insights doc

--- a/docs/02.01 - Monitoring Power Apps Portal.md
+++ b/docs/02.01 - Monitoring Power Apps Portal.md
@@ -35,11 +35,11 @@ When initially configured and provisioned, a new **Model Driven Power Applicatio
 
 ## Adding Azure Application Insights to Power Apps Portal
 
-Similar to web based application encompassing HTML, CSS and JavaScript, **Power Apps Portal** pages can be injected with the **Azure Application Insights JavaScript SDK**. **Oleksandr Olashyn's** article "[PowerApps Portals tracking using Azure Application Insights](https://www.dancingwithcrm.com/powerappsportals-tracking-using-azure-app-insights/)" does a great job detailing provisioning **Azure Application Insights** and adding the JavaScript SDK that I describe in this section.
+Similar to web based application encompassing HTML, CSS and JavaScript, **Power Apps Portal** pages can be injected with the **Azure Application Insights JavaScript SDK**. [**Oleksandr Olashyn's**](https://www.linkedin.com/in/dancingwithcrm/) article "[PowerApps Portals tracking using Azure Application Insights](https://www.dancingwithcrm.com/powerappsportals-tracking-using-azure-app-insights/)" does a great job detailing provisioning **Azure Application Insights** and adding the **JavaScript SDK** that I describe in this section.
 
 ### Open the Portal Management Power App
 
-When a **Power Apps Portal Application** is added to a **Power Platform** environment a **Model Driven Application** titled '***Portal Management***' will also be added. To add **Azure Application Insights**, begin by playing the '***Portal Management***' app.
+When a **Power Apps Portal Application** is added to a **Power Platform** environment, a **Model Driven Application** titled '***Portal Management***' will also be added. To add **Azure Application Insights**, begin by playing the '***Portal Management***' app.
 
 Once the application has loaded, locate the '***Enable Traffic Analytics***' sub area within the Administration group on [the site map](https://docs.microsoft.com/en-us/powerapps/maker/model-driven-apps/create-site-map-app) and open. 
 
@@ -51,7 +51,7 @@ The ***Portal Analytics*** page will prompt makers to choose a portal, depending
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/Portals.EnableTrafficAnalytics.PNG" style="zoom: 80%;" />
 
-To locate the **Azure Application Insights JavaScript SDK** snippet, two primary options exist: [reference the official Microsoft Docs site](https://docs.microsoft.com/en-us/azure/azure-monitor/app/javascript#snippet-based-setup) or [go to the GitHub repository](https://github.com/microsoft/ApplicationInsights-JS#snippet-setup-ignore-if-using-npm-setup). As referenced in the **[Power Apps Component Framework** article](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-apps---power-apps-component-framework), I tend to go with the GitHub repository but either will work.
+To locate the **Azure Application Insights JavaScript SDK** snippet, two primary options exist: [reference the official Microsoft Docs site](https://docs.microsoft.com/en-us/azure/azure-monitor/app/javascript#snippet-based-setup) or [go to the GitHub repository](https://github.com/microsoft/ApplicationInsights-JS#snippet-setup-ignore-if-using-npm-setup). As referenced [in the **Power Apps Component Framework** article](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-apps---power-apps-component-framework), I tend to go with the GitHub repository but either will work.
 
 **<u>NOTE:</u>** The version of the SDK may change, the current version of this writing is 2.5.6. [For the most current release, refer to this reference](https://github.com/microsoft/ApplicationInsights-JS/releases).
 
@@ -59,29 +59,29 @@ When adding the **Azure Application Insights SDK** snippet, the application is u
 
 ### Configure the Azure Application Insights SDK
 
-Once the snippet for the **JavaScript SDK** has been added, it needs to be configured to point to the organization's **Azure Application Insights** resource. The instrumentation key is a 32 digit GUID located on the Overview page of the **Azure Application Insights** resource.
+Once the snippet for the **JavaScript SDK** has been added, it needs to be configured to point to the organization's **Azure Application Insights** resource. The instrumentation key is a 32 digit GUID located on the ***Overview*** page of the **Azure Application Insights** resource.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/MonitorPortalsAppInsightsInstruKey.png" style="zoom: 80%;" />
 
-The instrumentation key will need to be added to the telemetry client's configuration property '***instrumentationKey***' as shown below.
+The **instrumentation key** will need to be added to the telemetry client's configuration property '***instrumentationKey***' as shown below.
 
 ```
 cfg: { // Application Insights Configuration    instrumentationKey: "YOUR_INSTRUMENTATION_KEY_GOES_HERE"    /* ...Other Configuration Options... */ }});
 ```
 
-Once the instrumentation key has been added and the changes have been applied to the **Power Apps Portal**, telemetry will begin to flow to **Azure Application Insights**. With that in mind, as discussed in previous articles, enriching the messages sent is key to optimizing the various features of **Azure Application Insights**. Continuing that train of thought, let's explore some options **Power Apps Portal** will allow for enrichment.
+Once the **instrumentation key** has been added and the changes have been applied to the **Power Apps Portal**, telemetry will begin to flow to **Azure Application Insights**. With that in mind, as discussed in previous articles, enriching the messages sent is key to optimizing the various features of **Azure Application Insights**. Continuing that train of thought, let's explore some options **Power Apps Portal** will allow for enrichment.
 
 ## Enriching the Power Apps Portal Messages
 
-Establishing a strong session and operational context is key to not only **Power App Portal** telemetry but practically any service or application. Review [the information found in the Power Apps Component Framework article](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-apps---power-apps-component-framework#pcf-configurecontext), while using TypeScript, is applicable here working with JavaScript.
+Establishing a strong session and operational context is key to not only **Power App Portal** telemetry but practically any service or application. Review [the information found in the Power Apps Component Framework article](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-apps---power-apps-component-framework#pcf-configurecontext), while using **TypeScript**, is applicable here working with **JavaScript**.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAppsPortal/AddTelemetryInitializer.PNG" style="zoom: 80%;" />
 
 ### Working with Liquid Templating Objects
 
-**Liquid Templating** allows makers and developers to add contextual information dynamically to **Power Apps Portal** web pages. Logged in user information, site settings, **Common Data Service** data, etc can all be referenced. For example, to work with user contextual information, [refer to this article](https://docs.microsoft.com/en-us/powerapps/maker/portals/liquid/liquid-objects#user), which describes user as an entity object (contact). 
+[**Liquid Templating**](https://docs.microsoft.com/en-us/powerapps/maker/portals/liquid/liquid-overview) allows makers and developers to add contextual information dynamically to **Power Apps Portal** web pages. Logged in user information, site settings, **Common Data Service** data, etc can all be referenced. For example, to work with user contextual information, [refer to this article](https://docs.microsoft.com/en-us/powerapps/maker/portals/liquid/liquid-objects#user), which describes user as an entity object (contact). 
 
-Below is an example of referencing a logged in user's information to set the authenticated user context within the Application Insights telemetry client. 
+Below is an example of referencing a logged in user's information to set the authenticated user context within the **Azure Application Insights** telemetry client. 
 
 **<u>Author's Note:</u>** Big thanks to **[Nikita Polyakov](https://www.linkedin.com/in/nikitapolyakov/)** for his assistance with creating and identifying enhancements to this script!
 
@@ -119,11 +119,7 @@ As discussed above, enriching messages is key to understanding and gaining insig
 
 The sample code used in this article can be found in the [**MonitoringPowerPlatform** GitHub repo located here](https://github.com/aliyoussefi/MonitoringPowerPlatform/blob/master/Samples/PowerAppsPortals/AppInsights/ApplicationInsightsV2_SnippetAndExample.js).
 
-
-
 ## Next Steps
-
- 
 
 In this article we have discussed how to set up **Azure Application Insights** with **Power Apps Portals**. We covered using the content snippet to add the **Azure Application Insights JavaScript SDK**. We discussed how to extend the SDK to include values from liquid templating and window objects. Finally we reviewed page views and how they can represented in **Application Insights**.
 
@@ -136,8 +132,6 @@ If you are interested in learning more about [**specialized guidance and trainin
 Your feedback is **extremely valuable** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
 
 ## Index
-
- 
 
 [Monitoring the Power Platform: Introduction and Index](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-introduction)
 
