--- a/docs/02.03 - The Monitor Tool Part 1 - Intro and Sample Scenarios.md
+++ b/docs/02.03 - The Monitor Tool Part 1 - Intro and Sample Scenarios.md
@@ -1,4 +1,4 @@
-# Monitoring the Power Platform: Model Driven Apps - Performance and Monitoring Markers
+# Monitoring the Power Platform: Model Driven Apps - Monitoring Tool Part 1: 
 
 ## Summary
 
@@ -10,17 +10,9 @@ This article will cover locating and downloading environment analytics using the
 
 Before we discuss techniques on how to capture events in Dynamics 365 let's examine some meaningful events. From the client perspective this may include performance counters and metrics, user click events and navigation as well as geolocations and preferences of users. 
 
-Some features of the platform allow for collecting markers while other events of interest we will have to supplement with custom delivery mechanisms. The next section of this article will detail a powerful tool that can be leveraged to collect metrics for the Dynamics 365 platform, the Performance Center.
 
-### Performance Center
 
-Refer to the article, Model Driven Apps - Performance Center Overview for getting started and detailed information. 
-
-<show export as json image>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/PerfCenter/ExportAsJson.PNG" style="zoom: 80%;" />
-
-In the above image, the Export button, located in the upper right hand corner will deliver the work block payload for further examination. Begin by choosing the work block to investigate, in the example above "EditForm" represents an entity record form open. Clicking the JSON or CSV button will produce an output which can then be saved as the desired file type.
+Some features of the platform allow for collecting markers while other events of interest we will have to supplement with custom delivery mechanisms. Upcoming articles will detail how to collect and push events of interest to a central area for analytics.
 
 ### The Monitoring Tool
 
@@ -43,8 +35,6 @@ Jesse Parsons' article on the Monitoring Tool, titled '' provides a through deep
 ## Key Performance Indicators
 
 Key Performance Indicators represent major lifecycle events within a particular user action, such as loading a form. Consider the image below.
-
-<insert monitor tool KPI image>
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/FormLoad-KPIs.PNG" style="zoom: 80%;" />
 
@@ -70,41 +60,51 @@ Here is a sample scenario in full showing the differences in loading new and exi
 
 ## Attribution
 
-On certain **Key Performance Indicators** a property is included called "***Attribution***". This includes the commands or actions included within a KPI.
+On certain **Key Performance Indicators** a property is included called "***Attribution***" which represents specific lifecycle events. This includes the commands or actions included within a KPI. For example, during a form load lifecycle, controls are rendered, ribbon rule are evaluated, onload event handlers are executed, etc. The Attribution property will specify and group,in chronological order, which events happened. An added bonus is the duration is also shown for each event along with if any synchronous calls were made. Consider the image below.
 
-<insert Attribution image>
+### Scenario: Locating dynamically added form changes and events
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/FullLoad.Attrition.PNG" style="zoom: 80%;" />
 
-The image above shows for the ***FullLoad*** KPI. Compare that image with the one below.
+The image above shows for the ***FullLoad*** KPI. In this image we see three main groups of events: CustomControl (form controls), Rule Evaluation (ribbon rules) and onload (form event handlers). What's interesting here is each of these is grouped, but also the solution they are part of and event solution layering is present. The RuleEvaluation and onload groups above both show an unmanaged or "Active" layer that contained customizations.
 
-<insert Attribution image2>
+Compare that image with the one below.
 
-A scenario came up during an investigation into the an increased duration of the FormSave KPI. Upon review, you can see additional events occurred, *tabstatechanged* and *onsave*. The onsave was expected due to the registered event handler on the form. However the tabstatechange was not, this was found to be due to a recent code addition that triggered the setDisplayState of the tab. By reviewing the Attribution property we were able to identify what caused the increase of 5 seconds.
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/SaveForm.Attribution.PNG" style="zoom: 80%;" />
 
-<insert 5 second tabstatechange>
+A scenario came up during an investigation into the an increased duration of the FormSave KPI. Upon review, you can see additional events occurred, *tabstatechanged* and *onsave*. The onsave was expected due to the registered event handler on the form. **<u>However the tabstatechange was not, this was found to be due to a recent code addition that triggered the setDisplayState of the tab.</u>** 
 
-### Timeline Events and Messages
-
-Timeline events represent the flow of the work block captured.
+<insert code>
 
 
 
+In the above image, the Export button, located in the upper right hand corner will deliver the work block payload for further examination. Begin by choosing the work block to investigate, in the example above "EditForm" represents an entity record form open. Clicking the JSON or CSV button will produce an output which can then be saved as the desired file type.
 
+By reviewing the Attribution property we were able to identify what caused the increase of 5 seconds.
 
-![](https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/Dynamics/D365-FormLoad-HotLoad-JSON.JPG)
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/SaveForm.Attribution.TabStateChanged.PNG" style="zoom: 80%;" />
 
-Comparing the cold load versus the cached form and data load:
+This tabstatechange Attribution wasn't found in the FullLoad KPI as expected. Actually it was found in a KPI called "EditForm". The next section of this article will briefly discuss another powerful tool that can be leveraged to collect metrics for the Dynamics 365 platform, the Performance Center.
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/Dynamics/D365-Compare-ColdLoad-WarmLoad-KPI.JPG" style="zoom:70%;" />
+### Performance Center
+
+The Performance Center is a tool that's been around for many years and versions within the platform. A quick search online will show step by step instructions on how to bring it up and work with it.
+
+<insert bing image>
+
+In the above scenario, using both the Monitor Tool and the Performance Center, we were able to identify the root cause.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/PerfCenter/ExportAsJson.PNG" style="zoom: 80%;" />
+
+## Performance Messages
+
+Performance categorized messages detail potential performance issues that a user may run into. At the time of this writing, I've uncovered only synchronous XHR calls being sent but I anticipate growth here.
 
 ### Scenario: Locating and Evaluating Synchronous Resource Timings
 
-Requests from a Model Driven App represent outgoing calls from the client to another source. These calls can occur either synchronously meaning the thread executing the call waits for the response, or asynchrously meaning the thread continues and listens for the response. Its preferred to elimnate all sync calls to reduce any potential disruption to a user's experience within the application.
+Requests from a Model Driven App represent outgoing calls from the client to another source. These calls can occur either synchronously meaning the thread executing the call waits for the response, or asynchronously meaning the thread continues and listens for the response. Its preferred to eliminate all sync calls to reduce any potential disruption to a user's experience within the application.
 
 The Monitor tool helps by identifying these requests and calling them out. These call outs can be found in the "Performance" category as shown below.
-
-<insert performance sync xhr sent> 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/Performance.SyncCall-Full.PNG" style="zoom: 80%;" />
 
@@ -116,16 +116,18 @@ Here is a gif showing how to use the Monitor tool, coupled with the Browser Deve
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/FullLoad-Perf-SyncXhr.gif" style="zoom: 80%;" />
 
-### Save for later
-
-Reviewing the image below (I've added the commented out timeline events for reference), we can see the calculation for PageNavigationModuleReady is represented by the difference between the timeline event for the KPI and the WorkStart timeline event.
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/PerfCenter/ExportAsJson.PNG" style="zoom: 80%;" />
-
-## Timeline Zones
-
-
+ Using these messages, along with outputs from Power Apps Checker, we can begin to uncover gaps in code analysis. In the next article, I'll cover in depth an approach to help identify and remediate these gaps.
 
 ## Next Steps
 
-In this article we covered 
+In this article we have covered how to work with the **Monitor** tool output files. **<u>Viewing within Power BI Dashboards, attaching to DevOps work items and storing in Azure backed log stores are all possibilities.</u>** Included [sample code](https://github.com/aliyoussefi/MonitoringPowerPlatform/tree/master/Samples) and **Kusto** queries to help you get started have also been provided.
+
+This article showcases use cases and strategies for working with the **Monitor** tool but really only represents the tip of the iceberg. Continue collecting, examining and churning the output for deep insight into user and platform trends.
+
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
+
+Your feedback is **<u>extremely valuable</u>** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
+
+## Index
+
+[Monitoring the Power Platform: Introduction and Index](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-introduction)
