add monitor tool saveform images

--- a/docs/02.03 - The Monitor Tool Part 1 - Intro and Sample Scenarios.md
+++ b/docs/02.03 - The Monitor Tool Part 1 - Intro and Sample Scenarios.md
@@ -2,35 +2,33 @@
 
 ## Summary
 
-The idea of monitoring Dynamics 365 or Model Driven Applications is not a new concept. Understanding where services are failing, users are running into errors, where form and business processes could be tuned for performance are key drivers for most if not all businesses, from small companies to enterprises. Luckily, the Dynamics 365 platform provides many tools to help audit and monitor business and operational events.
+Monitoring **Dynamics 365** or **Model Driven Applications** is not a new concept. Understanding where services are failing, users are running into errors, where form and business processes could be tuned for performance are key drivers for most if not all businesses, from small companies to enterprises. Luckily, the **Dynamics 365** platform provides many tools to help audit and monitor business and operational events.
 
-This article will cover locating and downloading environment analytics using the Common Data Service for Analytics. Questions regarding capacity and all up usage can be answered here. For operational events the Release Wave 1 2020 for Power Apps will be explored for feature announcement to allow for both manual and automated gathering. For specific activities or workloads within the platform we will explore tools to capture and explain performance markers.
+This article will cover collecting, querying and analyzing user interface events, specifically from the [recently announced Monitor Tool for Model Driven Apps](https://powerapps.microsoft.com/en-us/blog/monitor-now-supports-model-driven-apps/). The previous article covered message data points and how to perceive them. In this go round, we will  have a little fun exploring ways to utilize the output sessions. We will discuss how to build robust work items in **Azure DevOps** with **Monitor** output. We'll look at consuming and storing outputs for visualizations and analytics with **Kusto** queries. Finally, samples will be provided to parse and load session messages into **Azure Application Insights** and **Azure Log Analytics**.
 
 ## Collecting User Interface Events
 
-Before we discuss techniques on how to capture events in Dynamics 365 let's examine some meaningful events. From the client perspective this may include performance counters and metrics, user click events and navigation as well as geolocations and preferences of users. 
+Before we discuss techniques on how to capture events in **Dynamics 365** let's examine some meaningful events. From the client perspective this may include performance counters and metrics, user click events and navigation as well as geolocations and preferences of users. For server side, external integrations and execution context contain identifiers for response codes that may require additional validation.
 
-
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/ReadySlides.206.MeaningfulEvents.PNG" style="zoom: 80%;" />
 
 Some features of the platform allow for collecting markers while other events of interest we will have to supplement with custom delivery mechanisms. Upcoming articles will detail how to collect and push events of interest to a central area for analytics.
 
-### The Monitoring Tool
+**<u>NOTE:</u>** The rest of this article will cover collecting and analyzing messages focused on the client. That said, server side events play a major role and can impact the client experience. I'll address server side events in another article pertaining to **Azure Application Insights** and **Model Driven Apps**. In the meantime, [check out this GitHub repo that includes experimental Plug-In code](https://github.com/aliyoussefi/D365-Monitoring).
 
-The Monitoring Tool can be launched from the Power Apps Maker Portal. Once launched, the Play Model Driven App button can be pressed to begin a session attached to the tool.
+### The Monitor Tool
 
-<insert play button>
+The **Monitor** tool can be launched from the **Power Apps Maker Portal**. Once launched, the ***Play Model Driven App*** button can be pressed to begin a session attached to the tool.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/PlayModelDrivenApp.PNG" style="zoom: 80%;" />
 
-The monitoring tool can also be started by adding “**&monitor=true**” to the URL of your Model Driven Application.
+The **Monitor tool** can also be started by adding “**&monitor=true**” to the URL of your **Model Driven Application**.
 
-After consenting or allowing to start a session, the Monitoring Tool will light up rapidly with various messages. Similar to the <insert canvas app monitor link> article, each row can be further drilled into for investigation.
-
-<show drilled image - Full Load>
+After consenting or allowing to start a session, the **Monitor** tool will light up rapidly with various messages. Similar to the [the article "**Canvas Driven Apps - The Monitoring Tool**"](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-canvas-driven-apps---the-monitoring-tool), each row can be further drilled into for investigation.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/RowDetailFullLoad.PNG" style="zoom: 80%;" />
 
-Jesse Parsons' article on the Monitoring Tool, titled '' provides a through deep dive into the Monitoring Tool. I highly suggest reviewing and keeping close by for reference.
+[Jesse Parsons'](https://powerapps.microsoft.com/en-us/blog/author/jeparson/) article on the **Monitor Tool**, titled ['**Monitor now supports model-driven apps**'](https://powerapps.microsoft.com/en-us/blog/monitor-now-supports-model-driven-apps/) provides a through deep dive including sample scenarios. **<u>I highly suggest reviewing and keeping close by for reference.</u>**
 
 ## Key Performance Indicators
 
@@ -72,13 +70,17 @@ Compare that image with the one below.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/SaveForm.Attribution.PNG" style="zoom: 80%;" />
 
-A scenario came up during an investigation into the an increased duration of the FormSave KPI. Upon review, you can see additional events occurred, *tabstatechanged* and *onsave*. The onsave was expected due to the registered event handler on the form. **<u>However the tabstatechange was not, this was found to be due to a recent code addition that triggered the setDisplayState of the tab.</u>** 
-
-<insert code>
+A scenario came up during an investigation into the an increased duration of a form save. To begin, we went through the user events as normal with the Monitor Tool running.
 
 
 
-In the above image, the Export button, located in the upper right hand corner will deliver the work block payload for further examination. Begin by choosing the work block to investigate, in the example above "EditForm" represents an entity record form open. Clicking the JSON or CSV button will produce an output which can then be saved as the desired file type.
+Upon review, you can see additional events occurred, *tabstatechanged* and *onsave*. The onsave was expected due to the registered event handler on the form. **<u>However the tabstatechange was not, this was found to be due to a recent code addition that triggered the setDisplayState of the tab.</u>** 
+
+```
+if (control.getName() == tabName) {
+	control.setDisplayState("expanded");
+}
+```
 
 By reviewing the Attribution property we were able to identify what caused the increase of 5 seconds.
 
