mod saveform kpi detail image

--- a/docs/02.03 - The Monitor Tool Part 1 - Intro and Sample Scenarios.md
+++ b/docs/02.03 - The Monitor Tool Part 1 - Intro and Sample Scenarios.md
@@ -72,7 +72,7 @@ Compare that image with the one below.
 
 A scenario came up during an investigation into the an increased duration of a form save. To begin, we went through the user events as normal with the Monitor Tool running.
 
-
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/SaveForm.Message.MonitorTool.PNG" style="zoom: 80%;" />
 
 Upon review, you can see additional events occurred, *tabstatechanged* and *onsave*. The onsave was expected due to the registered event handler on the form. **<u>However the tabstatechange was not, this was found to be due to a recent code addition that triggered the setDisplayState of the tab.</u>** 
 
@@ -86,17 +86,11 @@ By reviewing the Attribution property we were able to identify what caused the i
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/SaveForm.Attribution.TabStateChanged.PNG" style="zoom: 80%;" />
 
-This tabstatechange Attribution wasn't found in the FullLoad KPI as expected. Actually it was found in a KPI called "EditForm". The next section of this article will briefly discuss another powerful tool that can be leveraged to collect metrics for the Dynamics 365 platform, the Performance Center.
+## Zone Activity and Other Data Points
 
-### Performance Center
+Within Key Performance Indicators, 
 
-The Performance Center is a tool that's been around for many years and versions within the platform. A quick search online will show step by step instructions on how to bring it up and work with it.
-
-<insert bing image>
-
-In the above scenario, using both the Monitor Tool and the Performance Center, we were able to identify the root cause.
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/PerfCenter/ExportAsJson.PNG" style="zoom: 80%;" />
+[Performance Observer](https://developer.mozilla.org/en-US/docs/Web/API/PerformanceObserver)
 
 ## Performance Messages
 
