added power automate blob container to log analytics example

--- a/docs/02.03 - The Monitor Tool Part 1 - Intro and Sample Scenarios.md
+++ b/docs/02.03 - The Monitor Tool Part 1 - Intro and Sample Scenarios.md
@@ -1,4 +1,4 @@
-# Monitoring the Power Platform: Model Driven Apps - Monitoring Tool Part 1: 
+# Monitoring the Power Platform: Model Driven Apps - Monitor Tool Part 1: Messages and Scenarios
 
 ## Summary
 
@@ -88,7 +88,9 @@ By reviewing the Attribution property we were able to identify what caused the i
 
 ## Zone Activity and Other Data Points
 
-Within Key Performance Indicators, 
+Within Key Performance Indicators, are other data points that prove useful when debugging performance related issues. Latency and Throughput are shown as well as timings for network related calls and custom script executions.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/SaveForm.MessageDetail.MonitorTool.PNG" style="zoom: 80%;" />
 
 [Performance Observer](https://developer.mozilla.org/en-US/docs/Web/API/PerformanceObserver)
 
