--- a/docs/02.03 - The Monitor Tool Part 2- Session Consumption and Analytics.md
+++ b/docs/02.03 - The Monitor Tool Part 2- Session Consumption and Analytics.md
@@ -1,24 +1,20 @@
-# Monitoring the Power Platform: Model Driven Apps - The Monitoring Tool Part 2: Session Consumption and Analytics
+# Monitoring the Power Platform: Model Driven Apps - The Monitor Tool Part 2: Session Consumption and Analytics
 
 ## Summary
 
 Monitoring **Dynamics 365** or **Model Driven Applications** is not a new concept. Understanding where services are failing, users are running into errors, where form and business processes could be tuned for performance are key drivers for most if not all businesses, from small companies to enterprises. Luckily, the **Dynamics 365** platform provides many tools to help audit and monitor business and operational events.
 
-This article will cover collecting, querying and analyzing user interface events, specifically from the [recently announced Monitor Tool for Model Driven Apps](https://powerapps.microsoft.com/en-us/blog/monitor-now-supports-model-driven-apps/). The previous article covered message data points and how to perceive them. In this go round, we will  have a little fun exploring ways to utilize the output sessions. We will discuss how to build robust work items in **Azure DevOps** with **Monitor** output. We'll look at consuming and storing outputs for visualizations and analytics with **Kusto** queries. Finally, samples will be provided to parse and load session messages into **Azure Application Insights** and **Azure Log Analytics**.
+This article will cover **collecting, querying and analyzing user interface events**, specifically from the [recently announced Monitor Tool for Model Driven Apps](https://powerapps.microsoft.com/en-us/blog/monitor-now-supports-model-driven-apps/). [The previous article](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-model-driven-apps---monitor-tool-part-1-messages-and-scenarios) covered message data points and how to perceive them. In this go round, we will have a little fun exploring ways to utilize the output sessions. We will discuss how to build robust work items in **Azure DevOps** with **Monitor** output. We'll look at consuming and storing outputs for visualizations and analytics with **Kusto** queries. Finally, samples will be provided to parse and load session messages into **Azure Application Insights** and **Azure Log Analytics**.
 
-## Collecting User Interface Events
+## The Monitor Tool
 
-The next section of this article will detail a powerful tool that can be leveraged to collect metrics and messages for the **Dynamics 365** platform, the **Monitor Tool**.
-
-## The Monitoring Tool
-
-**<u>The Monitoring Tool allows users and team members to collect messages and work together in debugging sessions</u>**. To begin, the **Monitoring Tool** can be launched from the **Power Apps Maker Portal**. Once launched, the ***Play Model Driven App*** button can be pressed to begin a session attached to the tool.
+**<u>The Monitor Tool allows users and team members to collect messages and work together in debugging sessions</u>**. To begin, the **Monitor Tool** can be launched from the **Power Apps Maker Portal**. Once launched, the ***Play Model Driven App*** button can be pressed to begin a session attached to the tool.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/PlayModelDrivenApp.PNG" style="zoom: 80%;" />
 
 The **Monitor Tool** can also be started by adding “**&monitor=true**” to the URL of your **Model Driven Application**.
 
-After consenting or allowing to start a session, the **Monitoring Tool** will light up rapidly with various messages. Similar to [the "**Canvas Driven Apps - The Monitoring Tool**" article](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-canvas-driven-apps---the-monitoring-tool), each row can be further drilled into for investigation.
+After consenting or allowing to start a session, the **Monitor Tool** will light up rapidly with various messages. Similar to [the "**Canvas Driven Apps - The Monitoring Tool**" article](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-canvas-driven-apps---the-monitoring-tool), each row can be further drilled into for investigation.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/RowDetailFullLoad.PNG" style="zoom: 80%;" />
 
@@ -26,11 +22,11 @@ After consenting or allowing to start a session, the **Monitoring Tool** will li
 
 ### Thoughts on Canvas Apps
 
-The **Monitor tool** works with **Power Apps Canvas Driven Apps** as shown in [the article "**Canvas Driven Apps - The Monitoring Tool**".](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-canvas-driven-apps---the-monitoring-tool) While this article is focused on **Model Driven Apps**, **<u>remember these techniques can also be utilized to serve Canvas Apps as well.</u>**
+The **Monitor** tool works with **Power Apps Canvas Driven Apps** as shown in [the article "**Canvas Driven Apps - The Monitoring Tool**".](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-canvas-driven-apps---the-monitoring-tool) While this article is focused on **Model Driven Apps**, **<u>remember these techniques can also be utilized to serve Canvas Apps as well.</u>**
 
-## Consuming Monitoring Sessions
+## Consuming Monitor Sessions
 
-Each time the **Monitor tool** is opened, a new session is created. Within each session are events that describe actions taken within the session as well as other helpful messages. Storing these sessions allow support teams to better understand errors and issues that arise during testing and production workloads. The previous article, "**Performance and Monitoring Markers Part 1**" covers scenarios that support users can use to better understand the data points delivered in the Monitor Tool.
+Each time the **Monitor** tool is opened, a new session is created. Within each session are events that describe actions taken within the session as well as other helpful messages. Storing these **sessions allow support teams to better understand errors and issues** that arise during testing and production workloads. The previous article, ["**Monitor Tool Part 1: Messages and Scenarios**"](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-model-driven-apps---monitor-tool-part-1-messages-and-scenarios) covers scenarios that support users can use to better understand the data points delivered in the **Monitor** Tool.
 
 The **Monitor** tool can also help analysts who want to learn more about the platform. For instance, user tendencies such as how long they spent on a page and which controls they interacted with in **Canvas Driven Apps**. For testing, the tool can help with non functional test strategies like **A/B testing**. Analyzing performance messages can **point to potential code coverage gaps or advise on user experience impact**. **Network calls can be securitized to determine if queries can be optimized** or web resources minified. **<u>The Monitor tool, in my opinion, really can open up a new view on how the platform is consumed and how users react with it.</u>**
 
@@ -44,7 +40,7 @@ Working with test cases within **Azure DevOps**, Analysts craft work items with 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/AttachMonitorOutputToDevOpsBug.gif" style="zoom: 80%;" />
 
-In that example, we see an analyst has found a performance issue with a **Dynamics 365** form. The analyst logged a new bug, included annotations and screenshots and the **Monitor** tool output. A developer can be assigned, pick this up and begin working on the bug. By having the **Monitor** tool output the developer can now **<u>see each call made and review the Attributions within the respective KPI.</u>** For more information, refer to the Attribution section within Part 1.
+In that example, we see an analyst has found a performance issue with a **Dynamics 365** form. The analyst logged a new bug, included annotations and screenshots and the **Monitor** tool output. A developer can be assigned, pick this up and begin working on the bug. By having the **Monitor** tool output the developer can now **<u>see each call made and review the Attributions within the respective KPI.</u>** For more information, refer to the ***Attribution*** section within [Part 1](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-model-driven-apps---monitor-tool-part-1-messages-and-scenarios).
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Dynamics/MonTool/SaveForm.Attribution.OnSaveFollowedByOnTabChanged.PNG" style="zoom: 80%;" />
 
